--- a/index.html
+++ b/index.html
@@ -99,55 +99,79 @@
         </div>
         <div class="main">
             <div class="projects">
-                <h5>Projects</h5>
-                <div class="project project_1">
-                    <div class="project_title">
-                        <h6>Dashboard</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                <h3>Projects</h3>
+                <div class="projects_grid">
+                    <div class="project project_1">
+                        <div class="project_title">
+                            <h6>Dashboard</h6>
+                            <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                        </div>
+                        <div class="project_symbols"></div>
                     </div>
-                    <div class="project_symbols"></div>
-                </div>
-                <div class="project project_2">
-                    <div class="project_title">
-                        <h6>Dashboard</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                    <div class="project project_2">
+                        <div class="project_title">
+                            <h6>Dashboard</h6>
+                            <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                        </div>
+                        <div class="project_symbols"></div>
                     </div>
-                    <div class="project_symbols"></div>
-                </div>
-                <div class="project project_3">
-                    <div class="project_title">
-                        <h6>Dashboard</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                    <div class="project project_3">
+                        <div class="project_title">
+                            <h6>Dashboard</h6>
+                            <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                        </div>
+                        <div class="project_symbols"></div>
                     </div>
-                    <div class="project_symbols"></div>
-                </div>
-                <div class="project project_4">
-                    <div class="project_title">
-                        <h6>Dashboard</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                    <div class="project project_4">
+                        <div class="project_title">
+                            <h6>Dashboard</h6>
+                            <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                        </div>
+                        <div class="project_symbols"></div>
                     </div>
-                    <div class="project_symbols"></div>
-                </div>
-                <div class="project project_5">
-                    <div class="project_title">
-                        <h6>Dashboard</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                    <div class="project project_5">
+                        <div class="project_title">
+                            <h6>Dashboard</h6>
+                            <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                        </div>
+                        <div class="project_symbols"></div>
                     </div>
-                    <div class="project_symbols"></div>
-                </div>
-                <div class="project project_6">
-                    <div class="project_title">
-                        <h6>Dashboard</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                    <div class="project project_6">
+                        <div class="project_title">
+                            <h6>Dashboard</h6>
+                            <p>Lorem ipsum, dolor sit amet consectetur.</p>
+                        </div>
+                        <div class="project_symbols"></div>
                     </div>
-                    <div class="project_symbols"></div>
                 </div>
             </div>
             <div class="announcements">
-                <h5>Announcements</h5>
+                <h3>Announcements</h3>
+                <div>
+                    <div class="announcement">
+                        <p>a 4 el kilogramoepapa</p>
+                    </div>
+                    <div class="announcement">
+                        <p>se descubre método para aprender JS en medio día</p>
+                    </div>
+                    <div class="announcement">
+                        <p>React.js me teme, yo lo sé</p>
+                    </div>
+                </div>
             </div>
             <div class="trending">
-                <h5>Trending</h5>
+                <h3>Trending</h3>
+                <div>
+                    <div class="announcement">
+                        <p>a 4 el kilogramoepapa</p>
+                    </div>
+                    <div class="announcement">
+                        <p>se descubre método para aprender JS en medio día</p>
+                    </div>
+                    <div class="announcement">
+                        <p>React.js me teme, yo lo sé</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
